Fixing alignment of about section

--- a/styles/main.css
+++ b/styles/main.css
@@ -302,3 +302,8 @@ img{
 .carousel {
   height: auto !important;
 }
+
+.about-text {
+    text-align: left;
+}
+
